Optimiza la carga de relaciones usando la caché